# pr-docs-reviewer

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TEST_SETUP.md  action.yml  entrypoint.sh  pyproject.toml  run_docs_generator.py  run_pipeline.py
.github/workflows/: build-image.yml  pr-docs-review.yml
.opencode/: DESIGN.md  TESTING.md
.opencode/plans/: doc-applier.md  llm-bottleneck-fix.md
docs_generator/: __init__.py  agent.py
pr_docs_reviewer/: agent.py
pr_docs_reviewer/tools/: __init__.py  apply_doc_updates.py  backend.py  fetch_pr_diff.py  get_function_signatures.py  github_api_backend.py  github_client.py  list_source_files.py  local_backend.py  read_doc_file.py  read_file_contents.py  search_docs_by_file_reference.py  search_docs_by_keyword.py
shared/: __init__.py
shared/tools/: __init__.py  apply_doc_updates.py  backend.py  github_api_backend.py  list_source_files.py  local_backend.py  read_doc_file.py  read_file_contents.py  search_docs_by_file_reference.py  search_docs_by_keyword.py
tests/: conftest.py  test_docs_generator_agents.py  test_pipeline_state.py
tests/fixtures/: multi_file_diff.patch  sample_diff.patch  sample_doc.md  sample_python_file.py
tests/tools/: test_apply_doc_updates.py  test_approve_suggestions.py  test_backend.py  test_fetch_pr_diff.py  test_get_function_signatures.py  test_github_api_backend.py  test_github_client.py  test_list_files_backend.py  test_list_source_files.py  test_local_backend.py  test_parse_changed_files.py  test_read_doc_file.py
